Fixed accordion focus border overlap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,6 +106,11 @@ input::-webkit-search-cancel-button {
 	vertical-align: text-top;
 }
 
+.accordion:has(.accordion-button:focus) {
+	position: relative;
+	z-index: 10;
+}
+
 .fly-up-fade {
 	animation: fly-up 300ms ease-out, fade 300ms ease-out;
 	animation-fill-mode: both;
